==> ch32-riscv-ug/CH32L103/EVT/EXAM/TOUCHKEY/TKYLIB/Touch.c <==
#include "Touch.h"
#define WAKEUPTIME 50          // Sleep Time = 250 * SLEEP_TRIGGER_TIME(100ms) = 25s

void touch_GPIOModeCfg (GPIOMode_TypeDef mode, uint32_t channel)
{
    switch (mode)
    {
        case GPIO_Mode_AIN :
            TKY_Pin[ channel ].GPIOx->CFGLR &= TKY_Pin[ channel ].GPIO_CFG_MASK;
            break;
        case GPIO_Mode_Out_PP :
            TKY_Pin[ channel ].GPIOx->CFGLR |= TKY_Pin[ channel ].GPIO_CFG_OUT;
            TKY_Pin[ channel ].GPIOx->BCR |= TKY_Pin[ channel ].GPIO_Pin;
            break;
        default :
            break;
    }
}

static void touch_Regcfg (void)
{
    ADC_InitTypeDef ADC_InitStructure = {0};
    uint8_t i = 0;

    RCC_PB2PeriphClockCmd (RCC_PB2Periph_GPIOA | RCC_PB2Periph_GPIOB, ENABLE);
    RCC_PB2PeriphClockCmd (RCC_PB2Periph_ADC1, ENABLE);
    for (i = 0; i < TKY_MAX_QUEUE_NUM; i++)
    {
        uint32_t tmpreg1 = 0, tmpreg2 = 0;
#if TKY_SHIELD_EN
        // Prior to testing, the overall channel is set to analog input
        touch_GPIOModeCfg (GPIO_Mode_AIN, my_tky_ch_init[ i ].channelNum);
#else
        // Push-pull ground discharge of the entire channel prior to testing
        touch_GPIOModeCfg (GPIO_Mode_Out_PP, my_tky_ch_init[ i ].channelNum);
#endif

            tmpreg1 = ADC1->SAMPTR2;
            tmpreg2 = ((uint32_t) 0x00000007) << (3 * my_tky_ch_init[ i ].channelNum);
            tmpreg1 &= ~tmpreg2;
            tmpreg2 = (uint32_t) ADC_SampleTime_CyclesMode0 << (3 * my_tky_ch_init[ i ].channelNum);
            tmpreg1 |= tmpreg2;
            ADC1->SAMPTR2 = tmpreg1;
    }

    ADC_DeInit (ADC1);

    RCC_ADCCLKConfig(RCC_PCLK2_Div2);

    ADC_InitStructure.ADC_Mode = ADC_Mode_Independent;
    ADC_InitStructure.ADC_ScanConvMode = DISABLE;
    ADC_InitStructure.ADC_ContinuousConvMode = DISABLE;
    ADC_InitStructure.ADC_ExternalTrigConv = ADC_ExternalTrigConv_None;
    ADC_InitStructure.ADC_DataAlign = ADC_DataAlign_Right;
    ADC_InitStructure.ADC_NbrOfChannel = 1;
    ADC_Init (ADC1, &ADC_InitStructure);

    ADC_Cmd (ADC1, ENABLE);

    if (SystemCoreClock <= 48000000)
        RCC_ADCCLKConfig (RCC_HCLK_ADC);                                                       //
    if (SystemCoreClock >= 24000000)
    {
    ADC_DutyDelayCmd (ADC1, ENABLE);
    ADC_Sample_ModeConfig (ADC1, ADC_Sample_Over_1M_Mode);
    }
    ADC1->CTLR1 |= (1 << 24) | (1 << 26) | (1<<25);                                                      // Enable ADC Buffer And TouchKey

#if TKY_SHIELD_EN
    for (uint8_t i = 0; i < TKY_MAX_QUEUE_NUM; i++)
    {
        ADC_TKey_ChannelxMulShieldCmd (ADC1, my_tky_ch_init[ i ].channelNum, ENABLE);          // Enable MulShield Channelx
    }
    ADC_TKey_MulShieldCmd (ADC1, ENABLE);                                                      // Enable MulShield
#endif
    TKY_SaveCfgReg();
}

static void touch_Channelinit (void)
{
    uint8_t error_flag = 0;
    uint16_t chx_mean = 0,chx_mean_last = 0;
    for (uint8_t i = 0; i < TKY_MAX_QUEUE_NUM; i++)
    {
        TKY_CHInit (my_tky_ch_init[ i ]);
    }

    for (uint8_t i = 0; i < TKY_MAX_QUEUE_NUM; i++)
    {

        chx_mean = TKY_GetCurChannelMean (my_tky_ch_init[ i ].channelNum, my_tky_ch_init[ i ].chargeTime,
                                          my_tky_ch_init[ i ].disChargeTime, 1000);

        if (chx_mean < 3400 || chx_mean > 3800)
        {
            error_flag = 1;
        }
        else
        {
            TKY_SetCurQueueBaseLine (i, chx_mean);
        }
    }
    // Charge/discharge baseline value abnormal, recalibrate baseline value
    if (error_flag != 0)
    {
        dg_log ("\n\nCharging parameters error, preparing for recalibration ...\n\n");
        uint16_t charge_time;
        for (uint8_t i = 0; i < TKY_MAX_QUEUE_NUM; i++)
        { 
            charge_time = 0, chx_mean = 0;
#if !(TKY_SHIELD_EN)
            touch_GPIOModeCfg (GPIO_Mode_AIN, my_tky_ch_init[ i ].channelNum);
#endif
            while (1)
            {
                chx_mean = TKY_GetCurChannelMean (my_tky_ch_init[ i ].channelNum, charge_time, 16, 1000);

                //  dg_log("testing .... chg : %d, baseline : %d\n",charge_time,chx_mean);//打印基线值

                if ((charge_time == 0) && ((chx_mean > 3800)))
                {
                    dg_log ("Error, %u KEY%u Too small Cap,Please check the hardware !\r\n", chx_mean, i);
                    break;
                }
                else
                {
                    if ((chx_mean > 3200) && (chx_mean < 3800))
                    {          // Charging parameters are normal
                        TKY_SetCurQueueBaseLine (i, chx_mean);
                        TKY_SetCurQueueChargeTime (i, charge_time, 16);
                        dg_log ("channel:%u, chargetime:%u,BaseLine:%u\r\n",
                                i, charge_time, chx_mean);
                        break;
                    }
                    else if (chx_mean >= 3800)
                    {
                        // chx_mean = TKY_GetCurChannelMean (my_tky_ch_init[ i ].channelNum, charge_time - 1, 16, 20);
                        TKY_SetCurQueueBaseLine (i, chx_mean_last);
                        TKY_SetCurQueueChargeTime (i, charge_time - 1, 16);
                        dg_log ("Warning,channel:%u Too large Current, chargetime:%u,BaseLine:%u\r\n",
                                i, charge_time, chx_mean_last);
                        break;
                    }
                    charge_time++;
                    chx_mean_last = chx_mean;
                    if (charge_time > 0x3ff)
                    {
                        dg_log ("Error, Chargetime Max,KEY%u Too large Cap,Please check the hardware !\r\n", i);
                        break;
                    }
                }
            }
#if !(TKY_SHIELD_EN)
            touch_GPIOModeCfg (GPIO_Mode_Out_PP, my_tky_ch_init[ i ].channelNum);
#endif
        }
    }
    TKY_SaveAndStop();
}
